исправление_старых_ошибок_и_создание_новых

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 <body>
 <style type="text/css">
     * {
-        color: black;
+        color: mediumblue;
         padding: 10px;
         text-align: center;
         font-size: 20px;
@@ -15,17 +15,17 @@
 
     .link {
         margin: 10px;
-        text-decoration: none;
-        box-shadow: 6px 6px 2px 1px black;
+        text-decoration: rosybrown;
+        box-shadow: -2px 2px 2px 2px aquamarine;
         cursor: pointer;
     }
 </style>
-<h1>Welcome to Index PAGE! </h1>
+<h1>Приложение с использованием Spring Security</h1>
 <br>
-<h1>Пожалуйста, авторизируйтесь!</h1>
+<h1>Для продолжения работы требуется авторизация</h1>
 
-<a class="link" href="/login"> Login</a>
-<a class="link" href="/login"> Profile</a>
-<a class="link" href="/admin/user"> Admin Panel</a>
+<a class="link" href="/login"> Войти</a>
+<a class="link" href="/login"> Профиль</a>
+<a class="link" href="/admin/user"> Панель Администратора</a>
 </body>
 </html>
