настройка кнопок перехода в шаблонах html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security4" lang="en">
 <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Spring Security Example</title>
 </head>
 <body>
 <style type="text/css">
-    * {
-        color: mediumblue;
+    body {
+        background-color: #f8f9fa;
+        /*color: mediumblue;*/
         padding: 10px;
         text-align: center;
         font-size: 20px;
         font-family: Verdana, Arial, Helvetica, sans-serif;
     }
-
-    .link {
-        margin: 10px;
-        text-decoration: rosybrown;
-        box-shadow: -2px 2px 2px 2px aquamarine;
-        cursor: pointer;
-    }
 </style>
 <h1>Приложение с использованием Spring Security</h1>
 <br>
-<h1>Для продолжения работы требуется авторизация</h1>
+<div sec:authorize="isAnonymous()">
+    <!-- Отображается только неавторизованным пользователям -->
+    <h1 style="color: red;">Пожалуйста, авторизируйтесь</h1>
+    <a class="btn btn-primary" href="/login">Войти</a>
+</div>
 
-<a class="link" href="/login"> Войти</a>
-<a class="link" href="/login"> Профиль</a>
-<a class="link" href="/admin/user"> Панель Администратора</a>
+<div sec:authorize="isAuthenticated()">
+    <!-- Показываем только зарегистрированным пользователям -->
+    <a class="btn btn-info" href="/user">Профиль</a>
+    <a sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-secondary" th:href="@{/admin/user}">Панель администратора</a>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
