--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -41,8 +41,8 @@
 </div>
 <br/>
 
-<a sec:authorize="hasRole('ROLE_ADMIN')"  class="btn btn-secondary" th:href="@{/admin/user}">For admin</a>
-
+<a class="btn btn-info" th:href="@{/}">Вернуться на Главную</a>
+<a sec:authorize="hasRole('ROLE_ADMIN')"  class="btn btn-warning" th:href="@{/admin/user}">Admin tab</a>
 <a class="btn btn-danger" th:href="@{/logout}">Logout</a>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
