изменение файла конфигурации с указанием ссылок для logoutUrl и logoutSuccessUrl, замена стандартной страницы login на кастомную, добавление контроллера для логина, изменение метода формы кнопки logout(веб-страницы) на post

--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -53,7 +53,10 @@
 <br>
 
 <a href="/admin/user" class="btn btn-secondary">Admin Panel</a>
-<a th:href="@{/logout}" class="btn btn-danger">Logout</a>
+<!--<a th:href="@{/logout}" class="btn btn-danger">Logout</a>-->
+<form th:action="@{/logout}" method="post" style="display:inline;">
+  <button type="submit" class="btn btn-danger">Logout</button>
+</form>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
