--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -43,7 +43,10 @@
 
 <a class="btn btn-info" th:href="@{/}">Вернуться на Главную</a>
 <a sec:authorize="hasRole('ROLE_ADMIN')"  class="btn btn-warning" th:href="@{/admin/user}">Admin tab</a>
-<a class="btn btn-danger" th:href="@{/logout}">Logout</a>
+<!--<a class="btn btn-danger" th:href="@{/logout}">Logout</a>-->
+<form th:action="@{/logout}" method="post" style="display:inline;">
+    <button type="submit" class="btn btn-danger">Logout</button>
+</form>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
