--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -47,7 +47,10 @@
 <a class="btn btn-info" th:href="@{/}">Вернуться на Главную</a>
 <a sec:authorize="hasRole('ROLE_ADMIN')"  class="btn btn-secondary" th:href="@{/user}">User Tab</a>
 <a class="btn btn-success" href="/admin/new">Create new user</a>
-<a class="btn btn-danger" th:href="@{/logout}">Logout</a>
+<!--<a class="btn btn-danger" th:href="@{/logout}">Logout</a>-->
+<form th:action="@{/logout}" method="post" style="display:inline;">
+    <button type="submit" class="btn btn-danger">Logout</button>
+</form>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
